@@ -26,8 +26,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.AbstractMap.SimpleImmutableEntry;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -37,6 +35,7 @@ import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Random;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -54,8 +53,8 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 public final class MetaPropertiesEnsembleTest {
     private static final MetaPropertiesEnsemble FOO =
         new MetaPropertiesEnsemble(
-            new HashSet<>(Arrays.asList("/tmp/empty1", "/tmp/empty2")),
-            new HashSet<>(Collections.singletonList("/tmp/error3")),
+            new HashSet<>(List.of("/tmp/empty1", "/tmp/empty2")),
+            new HashSet<>(List.of("/tmp/error3")),
             Stream.of(
                 new SimpleImmutableEntry<>("/tmp/dir4",
                     new MetaProperties.Builder().
@@ -94,7 +93,7 @@ public final class MetaPropertiesEnsembleTest {
 
     @Test
     public void testEmptyLogDirsForFoo() {
-        assertEquals(new HashSet<>(Arrays.asList("/tmp/empty1", "/tmp/empty2")),
+        assertEquals(new HashSet<>(List.of("/tmp/empty1", "/tmp/empty2")),
             FOO.emptyLogDirs());
     }
 
@@ -105,7 +104,7 @@ public final class MetaPropertiesEnsembleTest {
 
     @Test
     public void testErrorLogDirsForFoo() {
-        assertEquals(new HashSet<>(Collections.singletonList("/tmp/error3")), FOO.errorLogDirs());
+        assertEquals(new HashSet<>(List.of("/tmp/error3")), FOO.errorLogDirs());
     }
 
     @Test
@@ -115,7 +114,7 @@ public final class MetaPropertiesEnsembleTest {
 
     @Test
     public void testLogDirPropsForFoo() {
-        assertEquals(new HashSet<>(Arrays.asList("/tmp/dir4", "/tmp/dir5")),
+        assertEquals(new HashSet<>(List.of("/tmp/dir4", "/tmp/dir5")),
             FOO.logDirProps().keySet());
     }
 
@@ -226,9 +225,9 @@ public final class MetaPropertiesEnsembleTest {
     @Test
     public void testVerificationFailureOnLackOfMetadataLogDir() {
         MetaPropertiesEnsemble ensemble = new MetaPropertiesEnsemble(
-            Collections.singleton("/tmp/foo1"),
-            Collections.emptySet(),
-            Collections.emptyMap(),
+            Set.of("/tmp/foo1"),
+            Set.of(),
+            Map.of(),
             Optional.empty());
         assertEquals("No metadata log directory was specified.",
             assertThrows(RuntimeException.class,
@@ -241,9 +240,9 @@ public final class MetaPropertiesEnsembleTest {
     @Test
     public void testVerificationFailureOnMetadataLogDirWithError() {
         MetaPropertiesEnsemble ensemble = new MetaPropertiesEnsemble(
-            Collections.emptySet(),
-            Collections.singleton("/tmp/foo1"),
-            Collections.emptyMap(),
+            Set.of(),
+            Set.of("/tmp/foo1"),
+            Map.of(),
             Optional.of("/tmp/foo1"));
         assertEquals("Encountered I/O error in metadata log directory /tmp/foo1. Cannot continue.",
             assertThrows(RuntimeException.class,
@@ -285,7 +284,7 @@ public final class MetaPropertiesEnsembleTest {
     public void testMetaPropertiesEnsembleLoadError() throws IOException {
         MetaPropertiesEnsemble.Loader loader = new MetaPropertiesEnsemble.Loader();
         loader.addMetadataLogDir(createErrorLogDir());
-        loader.addLogDirs(Collections.singletonList(createLogDir(new MetaProperties.Builder().
+        loader.addLogDirs(List.of(createLogDir(new MetaProperties.Builder().
             setVersion(MetaPropertiesVersion.V1).
             setClusterId("AtgGav8yQjiaJ3rTXE7VCA").
             setNodeId(1).
@@ -323,7 +322,7 @@ public final class MetaPropertiesEnsembleTest {
 
     static class MetaPropertiesMockRandom extends Random {
         private final AtomicInteger index = new AtomicInteger(0);
-        private final List<Long> results = Arrays.asList(
+        private final List<Long> results = List.of(
             0L,
             0L,
             2336837413447398698L,
@@ -393,7 +392,7 @@ public final class MetaPropertiesEnsembleTest {
             assertThrows(RuntimeException.class, copier::verify).getMessage());
     }
 
-    private static final List<MetaProperties> SAMPLE_META_PROPS_LIST = Arrays.asList(
+    private static final List<MetaProperties> SAMPLE_META_PROPS_LIST = List.of(
         new MetaProperties.Builder().
             setVersion(MetaPropertiesVersion.V1).
             setClusterId("AtgGav8yQjiaJ3rTXE7VCA").
@@ -436,7 +435,7 @@ public final class MetaPropertiesEnsembleTest {
         String dir0 = createLogDir(SAMPLE_META_PROPS_LIST.get(0));
         loader.addMetadataLogDir(dir0);
         String dir1 = createLogDir(SAMPLE_META_PROPS_LIST.get(1));
-        loader.addLogDirs(Arrays.asList(dir0, dir1));
+        loader.addLogDirs(List.of(dir0, dir1));
         MetaPropertiesEnsemble ensemble = loader.load();
         MetaPropertiesEnsemble.Copier copier = new MetaPropertiesEnsemble.Copier(ensemble);
         copier.setLogDirProps(dir0, SAMPLE_META_PROPS_LIST.get(2));
