@@ -24,6 +24,7 @@ import org.apache.kafka.common.message.SnapshotFooterRecord;
 import org.apache.kafka.common.message.SnapshotHeaderRecord;
 import org.apache.kafka.common.message.VotersRecord;
 import org.apache.kafka.common.protocol.ApiMessage;
+import org.apache.kafka.common.protocol.Message;
 import org.apache.kafka.common.protocol.MessageUtil;
 import org.apache.kafka.common.record.CompressionType;
 import org.apache.kafka.common.record.ControlRecordType;
@@ -36,13 +37,14 @@ import org.apache.kafka.common.record.RecordBatch;
 import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.record.TimestampType;
 import org.apache.kafka.common.utils.BufferSupplier;
+import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.raft.Batch;
 import org.apache.kafka.raft.ControlRecord;
-import org.apache.kafka.raft.OffsetAndEpoch;
 import org.apache.kafka.raft.VoterSet;
 import org.apache.kafka.raft.VoterSetTest;
 import org.apache.kafka.server.common.KRaftVersion;
+import org.apache.kafka.server.common.OffsetAndEpoch;
 import org.apache.kafka.server.common.serialization.RecordSerde;
 import org.apache.kafka.snapshot.MockRawSnapshotWriter;
 import org.apache.kafka.snapshot.RecordsSnapshotWriter;
@@ -61,7 +63,6 @@ import org.mockito.Mockito;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.IdentityHashMap;
 import java.util.List;
@@ -94,7 +95,7 @@ public final class RecordsIteratorTest {
     @ParameterizedTest
     @MethodSource("emptyRecords")
     void testEmptyRecords(Records records) {
-        testIterator(Collections.emptyList(), records, true);
+        testIterator(List.of(), records, true);
     }
 
     @Property(tries = 50)
@@ -171,9 +172,9 @@ public final class RecordsIteratorTest {
                 new MockRawSnapshotWriter(new OffsetAndEpoch(100, 10), buffer::set)
             );
         try (RecordsSnapshotWriter<String> snapshot = builder.build(STRING_SERDE)) {
-            snapshot.append(Arrays.asList("a", "b", "c"));
-            snapshot.append(Arrays.asList("d", "e", "f"));
-            snapshot.append(Arrays.asList("g", "h", "i"));
+            snapshot.append(List.of("a", "b", "c"));
+            snapshot.append(List.of("d", "e", "f"));
+            snapshot.append(List.of("g", "h", "i"));
             snapshot.freeze();
         }
 
@@ -221,9 +222,9 @@ public final class RecordsIteratorTest {
                 new MockRawSnapshotWriter(new OffsetAndEpoch(100, 10), buffer::set)
             );
         try (RecordsSnapshotWriter<String> snapshot = builder.build(STRING_SERDE)) {
-            snapshot.append(Arrays.asList("a", "b", "c"));
-            snapshot.append(Arrays.asList("d", "e", "f"));
-            snapshot.append(Arrays.asList("g", "h", "i"));
+            snapshot.append(List.of("a", "b", "c"));
+            snapshot.append(List.of("d", "e", "f"));
+            snapshot.append(List.of("g", "h", "i"));
             snapshot.freeze();
         }
 
@@ -277,7 +278,7 @@ public final class RecordsIteratorTest {
         try (RecordsIterator<String> iterator = createIterator(records, BufferSupplier.NO_CACHING, true)) {
             assertTrue(iterator.hasNext());
             assertEquals(
-                Collections.singletonList(new ControlRecord(type, expectedMessage)),
+                List.of(ControlRecord.of(expectedMessage)),
                 iterator.next().controlRecords()
             );
             assertFalse(iterator.hasNext());
@@ -314,7 +315,7 @@ public final class RecordsIteratorTest {
             assertThrows(NoSuchElementException.class, iterator::next);
         }
 
-        assertEquals(Collections.emptySet(), allocatedBuffers);
+        assertEquals(Set.of(), allocatedBuffers);
     }
 
     static RecordsIterator<String> createIterator(
@@ -322,7 +323,14 @@ public final class RecordsIteratorTest {
         BufferSupplier bufferSupplier,
         boolean validateCrc
     ) {
-        return new RecordsIterator<>(records, STRING_SERDE, bufferSupplier, Records.HEADER_SIZE_UP_TO_MAGIC, validateCrc);
+        return new RecordsIterator<>(
+            records,
+            STRING_SERDE,
+            bufferSupplier,
+            Records.HEADER_SIZE_UP_TO_MAGIC,
+            validateCrc,
+            new LogContext()
+        );
     }
 
     static BufferSupplier mockBufferSupplier(Set<ByteBuffer> buffers) {
@@ -389,10 +397,11 @@ public final class RecordsIteratorTest {
                 buffer.capacity()
             )
         ) {
+            final Message message = defaultControlRecord(type);
             builder.appendControlRecord(
                 0,
                 type,
-                MessageUtil.toByteBuffer(defaultControlRecord(type), defaultControlRecordVersion(type))
+                MessageUtil.toByteBufferAccessor(message, defaultControlRecordVersion(type)).buffer()
             );
         }
 
@@ -473,36 +482,24 @@ public final class RecordsIteratorTest {
     }
 
     private static ApiMessage defaultControlRecord(ControlRecordType type) {
-        switch (type) {
-            case LEADER_CHANGE:
-                return new LeaderChangeMessage();
-            case SNAPSHOT_HEADER:
-                return new SnapshotHeaderRecord();
-            case SNAPSHOT_FOOTER:
-                return new SnapshotFooterRecord();
-            case KRAFT_VERSION:
-                return new KRaftVersionRecord();
-            case KRAFT_VOTERS:
-                return new VotersRecord();
-            default:
-                throw new RuntimeException("Should not happen. Poorly configured test");
-        }
+        return switch (type) {
+            case LEADER_CHANGE -> new LeaderChangeMessage();
+            case SNAPSHOT_HEADER -> new SnapshotHeaderRecord();
+            case SNAPSHOT_FOOTER -> new SnapshotFooterRecord();
+            case KRAFT_VERSION -> new KRaftVersionRecord();
+            case KRAFT_VOTERS -> new VotersRecord();
+            default -> throw new RuntimeException("Should not happen. Poorly configured test");
+        };
     }
 
     private static short defaultControlRecordVersion(ControlRecordType type) {
-        switch (type) {
-            case LEADER_CHANGE:
-                return ControlRecordUtils.LEADER_CHANGE_CURRENT_VERSION;
-            case SNAPSHOT_HEADER:
-                return ControlRecordUtils.SNAPSHOT_HEADER_CURRENT_VERSION;
-            case SNAPSHOT_FOOTER:
-                return ControlRecordUtils.SNAPSHOT_FOOTER_CURRENT_VERSION;
-            case KRAFT_VERSION:
-                return ControlRecordUtils.KRAFT_VERSION_CURRENT_VERSION;
-            case KRAFT_VOTERS:
-                return ControlRecordUtils.KRAFT_VOTERS_CURRENT_VERSION;
-            default:
-                throw new RuntimeException("Should not happen. Poorly configured test");
-        }
+        return switch (type) {
+            case LEADER_CHANGE -> ControlRecordUtils.LEADER_CHANGE_CURRENT_VERSION;
+            case SNAPSHOT_HEADER -> ControlRecordUtils.SNAPSHOT_HEADER_CURRENT_VERSION;
+            case SNAPSHOT_FOOTER -> ControlRecordUtils.SNAPSHOT_FOOTER_CURRENT_VERSION;
+            case KRAFT_VERSION -> ControlRecordUtils.KRAFT_VERSION_CURRENT_VERSION;
+            case KRAFT_VOTERS -> ControlRecordUtils.KRAFT_VOTERS_CURRENT_VERSION;
+            default -> throw new RuntimeException("Should not happen. Poorly configured test");
+        };
     }
 }
